--- a/firmware_vex/nucleo/Makefile
+++ b/firmware_vex/nucleo/Makefile
@@ -1,9 +1,9 @@
 #DEV=/dev/cu.usbmodem3103
-DEV=/dev/cu.usbmodem34203
+DEV=/dev/ttyACM0
 #DEV=/dev/cu.usbmodem34103
 #FILES=main.py flash.mpy i2c.py gpio_config_builder.py config_io_o_h.hex config_io_o_l.hex
 #FLASH=/media/efabless/PYBFLASH/
-FLASH=//Volumes/PYBFLASH/
+FLASH=/mnt/disk
 NUCLEO_CMD=
 
 
