firmware_vex/nucleo: uncomment copy_rshell

--- a/firmware_vex/nucleo/Makefile
+++ b/firmware_vex/nucleo/Makefile
@@ -18,12 +18,12 @@ copy: compile
 	mpremote connect ${DEV} cp main.py :
 	mpremote connect ${DEV} ls :
 
-#copy: compile
-#	rshell --port ${DEV} cp flash.mpy i2c.mpy gpio_config_builder.mpy nucleo_api.mpy gpio_config_def.mpy /flash
-#	rshell --port ${DEV} cp config_io_o.hex /flash
-#	rshell --port ${DEV} cp io_config.mpy /flash
-#	rshell --port ${DEV} cp main.py /flash
-#	rshell --port ${DEV} ls /flash
+copy_rshell: compile
+	rshell --port ${DEV} cp flash.mpy i2c.mpy gpio_config_builder.mpy nucleo_api.mpy gpio_config_def.mpy /flash
+	rshell --port ${DEV} cp config_io_o.hex /flash
+	rshell --port ${DEV} cp io_config.mpy /flash
+	rshell --port ${DEV} cp main.py /flash
+	rshell --port ${DEV} ls /flash
 
 # copies scripts to nucleo
 copy2: compile
